5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1712_2505.log
== SUBMITION (2019-05-13 15:19:25) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
	aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- EXECUTION TIME:
0.153638
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 12
    aux=-1
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:19:32) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
	aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
File "XXXX", line 12
    aux=-1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:20:00) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:20:02) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:20:28) 
-- CODE:
from math import*
au=eval(input("angulo de x:"))
k=int(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:20:58) 
-- CODE:
from math import*
au=eval(input("angulo de x:"))
xint(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    xint(input())
NameError: name 'xint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:21:02) 
-- CODE:
from math import*
au=eval(input("angulo de x:"))
x=nt(input("Numero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x=nt(input())
NameError: name 'nt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:21:52) 
-- CODE:
from math import*
au=eval(input("angulo de x:"))
x=int(input("Nuero de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(c<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:21:58) 
-- CODE:
from math import*
au=eval(input("angulo de x:"))
x=int(input("Nunro de termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(c<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:23:13) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(c<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:23:36) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(aux<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(aux<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:23:50) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(aux<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(aux<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:24:16) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- OUTPUT:
5.0
-15.8333333333
10.2083333333
-5.2926587302
0.0896301808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:24:54) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- OUTPUT:
5.0
-15.8333333333
10.2083333333
-5.2926587302
0.0896301808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:25:10) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
x=int(input("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- EXECUTION TIME:
0.213552
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
5.0
-15.8333333333
10.2083333333
-5.2926587302
0.0896301808
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
4.0
-6.6666666667
1.8666666667
-1.3841269841
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
3.0
-1.5
0.525
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:40:10) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
k=intt("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
File "XXXX", line 3
    k=intt("Termos da serie:"))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:40:10) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
k=intt("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- EXECUTION TIME:
0.140634
-- ERROR:
  File "/home/codebench/codes/1712/2505/main.py", line 3
    k=intt("Termos da serie:"))
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:40:11) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
k=intt("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
File "XXXX", line 3
    k=intt("Termos da serie:"))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:45:08) 
-- CODE:
from math import*
aux=eval(input("angulo de x:"))
k=int("Termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<x):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
File "XXXX", line 3
    k=int("Termos da serie:"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:53) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:50:42) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:00) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*(x**d)/factorial(d))
	if(aux==1):
		aux=-1
	else:
		aux=1
		
	c=c+1
	d=d+2
	print(round(e,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e=e+(aux*(x**d)/factorial(d))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:22:50) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:23:08) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:23:08) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:23:11) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- EXECUTION TIME:
0.127009
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5707963268
-0.9248322293
-1.0045248555
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0471975512
0.8558007816
0.8662952838
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:49:29) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:49:53) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:50:14) 
-- CODE:
from math import*
ax=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((ax**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- EXECUTION TIME:
0.221597
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5707963268
-0.9248322293
-1.0045248555
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0471975512
0.8558007816
0.8662952838
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:50:31) 
-- CODE:
from math import*
x=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((x**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
	print(round(e, 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:52:47) 
-- CODE:
from math import*
x=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((x**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
print(round(e, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:52:53) 
-- CODE:
from math import*
x=eval(input("angulo de x:"))
k=int(input("termos da serie:"))

c=0
d=1
e=0
aux=1
while(c<k):
	e=e+(aux*((x**d)/factorial(d)))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	d=d+2
print(round(e, 10))
-- EXECUTION TIME:
0.177282
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
